Fix: https ready
- removed _tasks
- add bin/deploy.sh

--- a/_includes/cubeBuild.html
+++ b/_includes/cubeBuild.html
@@ -1,15 +1,13 @@
 <ul>
   <li>
     <a href="//g.alicdn.com/thx/cube/{{ site.version }}/cube.css">
-      <i class="iconfont">&#523;</i> cube.css
+      <i class="iconfont mi-source"></i> cube.css
     </a>
     <code>//g.alicdn.com/thx/cube/{{ site.version }}/cube.css</code></li>
   <li>
     <a href="//g.alicdn.com/thx/cube/{{ site.version }}/cube.min.css">
-      <i class="iconfont">&#295;</i> cube.css 压缩版
+      <i class="iconfont mi-zip"></i> cube.css 压缩版
     </a>
     <code>//g.alicdn.com/thx/cube/{{ site.version }}/cube.min.css</code>
   </li>
 </ul>
-
-
