--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,7 +1,7 @@
 <script type="text/x-template" id="J_tocTpl">
 {% raw %}
 <div class="stoc type-toc">
-  <label id="J_tocToggler"><h2><i class="iconfont">&#390;</i>目录</h2></label>
+  <label id="J_tocToggler"><h2><i class="iconfont mi-list"></i>目录</h2></label>
   {{#each tree}}
     <ol>
     {{#each children}}
