--- a/_includes/cubeModules.html
+++ b/_includes/cubeModules.html
@@ -1,21 +1,21 @@
 <div class="dib-box justify cube-modules">
-  <a class="dib" href="{{ site.baseurl }}/doc/neat"><i class="iconfont">&#536;</i>
+  <a class="dib" href="{{ site.baseurl }}/doc/neat"><i class="iconfont mi-tadpole"></i>
     <span class="name">Neat</span>
     <span class="caption">全新的样式重置</span>
   </a>
-  <a class="dib" href="{{ site.baseurl }}/doc/layout"><i class="iconfont">&#276;</i>
+  <a class="dib" href="{{ site.baseurl }}/doc/layout"><i class="iconfont mi-layout"></i>
     <span class="name">Layout</span>
     <span class="caption">更加丰富的布局</span>
   </a>
-  <a class="dib" href="{{ site.baseurl }}/doc/button"><i class="iconfont">&#353;</i>
+  <a class="dib" href="{{ site.baseurl }}/doc/button"><i class="iconfont mi-like"></i>
     <span class="name">Button</span>
     <span class="caption">自适应按钮</span>
   </a>
-  <a class="dib" href="{{ site.baseurl }}/doc/type"><i class="iconfont">&#341;</i>
+  <a class="dib" href="{{ site.baseurl }}/doc/type"><i class="iconfont mi-type"></i>
     <span class="name">Type</span>
     <span class="caption">照顾中文的版式设计</span>
   </a>
-  <a class="dib" href="{{ site.baseurl }}/doc/iconfont"><i class="iconfont">&#268;</i>
+  <a class="dib" href="{{ site.baseurl }}/doc/iconfont"><i class="iconfont mi-iconfont"></i>
     <span class="name">Iconfont</span>
     <span class="caption">字体图标平台</span>
   </a>
