--- a/src/scss/neat.scss
+++ b/src/scss/neat.scss
@@ -1,25 +1,49 @@
 /**
 * @file:      Neat.css
 * @author:    一丝
-* @update:    2016年08月10日22:05:05
+* @update:    2019-02-19
 * @copyright: 基于 normalize.css | MIT License
 */
 
 /**
-* Neat.css 解决的问题
-* 基于业务需要兼容的浏览器做到以下几点：
-* 1.解决BUG，特别是低级浏览器的常见BUG；
-* 2.统一效果，但不盲目追求重置为0；
-* 3.向后兼容；
-* 4.考虑响应式；
-* 5.考虑移动设备。
-*/
+ * 1. 所有元素默认盒模型重置为 border-box
+ * 2. iOS 中改变屏幕方向防止自动调整文字大小
+ */
+html {
+  box-sizing: border-box; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); // 去掉 iOS 点击时的半透明遮罩
+}
+
+/**
+ * 鼠标点击时不显示焦点，但通过键盘切换时显示（Chrome 67+）
+ * input 等表单元素应该在业务中单独定义 focus 样式
+ * https://www.chromestatus.com/feature/5823526732824576
+ * Demo: https://codepen.io/yisi/pen/yZZzjY
+ */
+:focus:not(:-moz-focusring),
+:focus:not(:focus-visible) {
+  outline: 0;
+}
+
+[tabindex="-1"]:focus {
+  outline: 0;
+}
 
 /* ==========================================================================
  有即是无，无即是有
  ========================================================================== */
 body, dl, dd, /* dt, 默认没边距 */
-ul, ol, /*li, 默认没边距 */
+ul, ol, /* li, 默认没边距 */
 h1, h2, h3, h4, h5, h6, pre, /* code, 默认没边距 */
 form, fieldset, legend, input, textarea, optgroup,
 p, blockquote, figure, hr, menu, dir,
@@ -46,7 +70,7 @@ ul, ol {
 * 2. 去掉 IE 10+ 点击链接时的灰色背景
 */
 a {
-  text-decoration: none; /* 1 */
+  text-underline-position: under; /* 1 */
   background-color: transparent; /* 2 */
 }
 
@@ -152,6 +176,7 @@ h6 {
 abbr,
 acronym {
   border-bottom: 1px dotted; /* 1 */
+  text-decoration: none; /* 1 */
   cursor: help; /* 2 */
 }
 
@@ -171,11 +196,13 @@ dfn {
 }
 
 /**
-* 修正 Firefox 和其他浏览器之间的差异
+* 1. 修正 Firefox 和其他浏览器之间的差异
+* 2. 在 Edge 和 IE 中显示溢出
 */
 hr {
-  box-sizing: content-box;
-  height: 0;
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
 }
 
 /**
@@ -194,24 +221,27 @@ mark {
 * XP自带 Courier New
 * Windows 7开始自带的 Consolas
 * Mac上自带的Monaco，Osaka-Mono
+* 1. 保证所有浏览器中正确的 em 字号渲染
 */
 code,
 kbd,
 pre,
 samp {
   font-family: monaco, menlo, consolas, 'courier new', courier, monospace;
+  font-size: 1em; /* 1 */
 }
 
 /**
 * 增强所有浏览器中 pre 标签中文本的可读性
 * 1. IE 6-7 不支持 pre-wrap
 * 2. pre 标签应当包含滚溢出
+
 */
 pre {
   white-space: pre;
   white-space: pre-wrap; /* 1 */
   word-wrap: break-word;
-  overflow: auto;
+  overflow: auto; /* 2 */
 }
 
 /**
@@ -319,35 +349,25 @@ img {
   -ms-interpolation-mode: bicubic; /* 6 */
 }
 
-/**
-* 修复 IE9 中的「overflow」的怪异表现
-*/
-svg:not(:root) {
-  overflow: hidden;
-}
-
 /* ==========================================================================
  表单
  ========================================================================== */
 
 /**
-* 定义一致的边框、外边距和内边距
+* 修正 Firefox 中不一致的 padding
 */
 fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: .35em .625em .75em;
+  padding: 0.35em 0.75em 0.625em;
 }
 
 /**
 * 1. 修正 IE 6-9 中颜色不能继承的问题
 * 2. 修正 Firefox3 中文字不换行的问题
-* 3. 修正 IE6-7 中怪异的对齐方式
 */
 legend {
   border-style: none; /* 1 */
+  color: inherit; /* 1 */
   white-space: normal; /* 2 */
-  *margin-left: -7px; /* 3 */
 }
 
 /**
@@ -369,10 +389,11 @@ textarea {
 
 /**
 * 修正 IE7 随着字数增加边距不断增加的问题
+* 在 IE 和 Edge 中正确的显示溢出
 */
 input,
 button {
-  *overflow: visible;
+  overflow: visible;
 }
 
 /**
@@ -386,15 +407,16 @@ select {
 }
 
 /**
-* 1. 避免 Android 4.0.* 中的 WebKit bug ，该bug会破坏原生的
- 「audio」 和「video」的控制器
+* 1. 避免 Android 4.0.* 中的 WebKit bug ，该 bug 会破坏原生的
+ 「audio」 和「video」的控制器（当不需要支持 Android 4.0 后，此规则前的 html 选择器可以删除）
+  https://github.com/necolas/normalize.css/pull/712
 * 2. 更正 iOS 中无法设置可点击的「input」的问题
 * 3. 统一其他类型的「input」的光标样式
 */
 button,
 html input[type="button"], /* 1 */
-input[type="reset"],
-input[type="submit"] {
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button; /* 2 */
   cursor: pointer; /* 3 */
 }
@@ -408,44 +430,65 @@ input[disabled] {
 }
 
 /**
-* 1. 修正 IE 8/9 box-sizing 被设置为「content-box」的问题
-* 2. 移除 IE 8/9 中多余的内边距
-* 3. 移除 IE7 中多余的内边距(IE6 中任然存在)
+* 1. 修正 IE 8/9/10 box-sizing 被设置为「content-box」的问题
+* 2. 移除 IE 8/9/10 中多余的内边距
 */
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box; /* 1 */
   padding: 0; /* 2 */
-  *height: 13px; /* 3 */
-  *width: 13px; /* 3 */
 }
 
 /**
 * 1. 修正 Safari 5 和 Chrome 中「appearance」被设置为「searchfield」的问题
 * 2. 修正 Safari 5 和 Chrome 中「box-sizing」被设置为 「border-box」的问题
+* 3. 修正 Safari 焦点样式
 */
-input[type="search"] {
+[type="search"] {
   -webkit-appearance: textfield; /* 1 */
-  box-sizing: content-box;
+  box-sizing: content-box; /* 2 */
+  outline-offset: -2px; /* 3 */
 }
 
 /**
-* 1.移除 OS X 中 Safari5 和 Chrome 搜索框内侧的左边距
-* 2.如果需要隐藏清除按钮需要加上
- input[type="search"]::-webkit-search-cancel-button
+* 1. 移除 OS X 中 Safari5 和 Chrome 搜索框内侧的左边距
+* 如果需要隐藏清除按钮需要加上 input[type="search"]::-webkit-search-cancel-button
 */
-input[type="search"]::-webkit-search-decoration /* 1 */
+[type="search"]::-webkit-search-decoration /* 1 */
 {
   -webkit-appearance: none;
+}
+
+/**
+ * 1. 修正 iOS 和 Safari 中无法设置可点击类型的问题
+ * 2. 修正 Safari 中字体属性可继承
+ */
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /**
 * 移除 Firefox 3+ 的内边距
 */
 button::-moz-focus-inner,
-input::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
+}
+
+/**
+ * 恢复焦点样式
+ */
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
 }
 
 /**
@@ -454,8 +497,8 @@ input::-moz-focus-inner {
 * @demo: http://jsfiddle.net/FFXEc/
 * 动画演示：http://gtms04.alicdn.com/tps/i4/T18kd8FCtaXXc_FhcF-330-350.gif
 */
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -529,18 +572,22 @@ header,
 hgroup,
 main,
 nav,
-section,
-summary {
+section {
   display: block;
 }
 
+/*
+ * 为所有浏览器设置为正确的 display 类型
+ */
+
+summary {
+  display: list-item;
+}
+
 /**
-* 1. 修正未定义为「inline-block」的元素
-* 2. 修正 Chrome、Firefox、Opera 中 「progress」元素 vertical-align 默认值不一致
+* audio, canvas, video 元素默认为 inline。 https://github.com/necolas/normalize.css/issues/690
+* 1. 修正 Chrome、Firefox、Opera 中 「progress」元素 vertical-align 默认值不一致
 */
-audio,
-canvas,
-video,
 progress {
   display: inline-block; /* 1 */
   vertical-align: baseline; /* 2 */
@@ -559,7 +606,8 @@ audio:not([controls]) {
 * 修复 IE 7/8/9，Firefox 3 和 Safari 4 中 「hidden」属性不起作用的问题
 * 在IE、Safari、Firefox 22- 中隐藏「template」元素
 */
-[hidden], template {
+[hidden],
+template {
   display: none;
 }
 
